prevent overflow x scroll

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 .body {
   font-family: var(--monserrat), san-serif;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 .container {
